<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu">

    <TextView
            android:id="@+id/homeworld_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu_homeworldcaption" />

    <TextView
            android:id="@+id/homeworld_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/homeworld_caption" />

    <Button
            android:id="@+id/selectzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu_selectzone"
            android:layout_below="@id/homeworld_caption"/>
    <Button
            android:id="@+id/majorevents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainMenu_majorevents"
            android:layout_below="@id/selectzone" />
    <Button
            android:id="@+id/selecthomeworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu_selecthomeworld"
            android:layout_below="@id/majorevents" />
    <Button
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainmenu_options"
            android:layout_below="@id/selecthomeworld" />

</RelativeLayout>
